-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.2
-
Android SDK 33, Samsung Galaxy Tab S3 (Android 9), Samsung Galaxy A32 (Android 13). Built on MacOS with Qt 6.5.2
-
-
c5e5d6191 (dev), 2ccb6a50f (6.6), 507c3908b (6.5)
-
2023wk36FOQtforAndroid
Hi all,
I was testing how the camera behaves on the latest 6.5.2 version and found a crash. The app crashes when you have the camera loaded and you minimise the app.
You can reproduce it with the declarative camera example. By the way, there are quite a few issues with the project, mainly QML/JS undefines.
What I see in the logs:
W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
E AndroidRuntime: FATAL EXCEPTION: CameraBackground
E AndroidRuntime: Process: org.qtproject.example.declarative_camera, PID: 24464
E AndroidRuntime: java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
E AndroidRuntime: at android.media.ImageReader.acquireNextImage(ImageReader.java:502)
E AndroidRuntime: at android.media.ImageReader.acquireLatestImage(ImageReader.java:386)
E AndroidRuntime: at org.qtproject.qt.android.multimedia.QtCamera2$4.onImageAvailable(QtCamera2.java:157)
E AndroidRuntime: at android.media.ImageReader$ListenerHandler.handleMessage(ImageReader.java:800)
E AndroidRuntime: at android.os.Handler.dispatchMessage(Handler.java:106)
E AndroidRuntime: at android.os.Looper.loop(Looper.java:216)
E AndroidRuntime: at android.os.HandlerThread.run(HandlerThread.java:65)
My target SDK is 33. I reproduced the same crash on Android 13 (Samsung) and Android 9 (Samsung).
- duplicates
-
QTBUG-115460 Camera crash on image acquire on Android
-
- Closed
-
- is duplicated by
-
QTBUG-117477 [DeclarativeCamera] The app is crashing when capture photo and switch to video
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-116526 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 502176,10 | Android-ffmpeg: handle maxImages acquired problem | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 504228,2 | Android-ffmpeg: handle maxImages acquired problem | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 504263,2 | Android-ffmpeg: handle maxImages acquired problem | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |